added input limit

--- a/MSRAbotChatSimulation/templates/index.html
+++ b/MSRAbotChatSimulation/templates/index.html
@@ -32,7 +32,7 @@
                 <li>Talk to MSRAbot!</li>
             </ul>
             <form action="" onsubmit="send_message(event)" id="form" style="display: block" >
-                <input type="text" id="messageText" autocomplete="off" style="font-family: Arial, sans-serif; font-size: 24px;"/>
+                <input type="text" id="messageText" autocomplete="off" maxlength="50" style="font-family: Arial, sans-serif; font-size: 24px;"/>
                 <button id="sendform" style="font-family: Arial, sans-serif; font-size: 24px;">Send</button>
             </form>
             <button id="button_mic" style="font-family: Arial, sans-serif; font-size: 24px;">Start Mic</button>
